<resources>
    <string name="app_name">记账宝</string>

    <string name="saveUser">saveUser</string>
    <string name="t1">钱都花哪了？</string>
    <string name="t2">记录生活，点亮财富人生！</string>
    <string name="t3">点击进入</string>
    <string name="hint">请留下你的意见或建议，我们将努力改进</string>
    <string name="tel">留下联系方式，以便更好的联系你</string>
    <string name="suggestion">意见反馈</string>

    <string name="month_out">本月支出</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="in">收入</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_excel">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>
    <string name="chart_info">账单详情</string>

    <string name="about_appinfo">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_balabala">学会这个项目,就能够理解Activity，Fragment，数据库等相关内容，好好学习吧！</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_data">暂无数据</string>

</resources>