<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomebg"
    android:orientation="vertical"
    tools:context=".activity.WelcomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/wel_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/t1"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/t2"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_know_wel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_style_three"
        android:text="@string/t3"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>