<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/item_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="￥ 0"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/item_mainlv_top_iv_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/item_mainlv_top_tv_out"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ih_show" />

        <TextView
            android:id="@+id/item_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv_out"
            android:text="@string/month_in" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv_out"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/item_mainlv_top_tv2"
            android:text="￥ 0"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_mainlv_top_tv2"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:text="￥ 0"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_mainlv_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_mainlv_top_tv2"
            android:layout_toLeftOf="@id/item_mainlv_top_tv_budget"
            android:text="@string/budget" />

        <TextView
            android:id="@+id/item_mainlv_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/ih_biaoge"
            android:drawablePadding="10dp"
            android:text="@string/see_excel"
            android:textColor="@color/green_006400" />
    </RelativeLayout>

    <TextView
        android:id="@+id/item_mainlv_top_tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="今日支出 ￥0 收入 ￥0"
        android:textStyle="bold" />
</LinearLayout>